--- a/style.css
+++ b/style.css
@@ -1,3 +1,7 @@
+html {
+    font: 700 16px ff-enzo-web,"Helvetica Neue","Segoe UI Light",Sans-Serif;
+}
+
 .cell {
     width: 25px;
     height: 25px;
@@ -130,11 +134,13 @@
     padding: 0;
     font-weight: bold;
     list-style-type: none;
+    font-size: 31px;
 }
 
 .description ul li {
     margin-top: 20px;
     font-weight: normal;
+    font-size: 21px;
 }
 
 .moveBtns {
